# custom_bootloader_bootloader_override

./: README.md
bootloader_override/: .cproject  .project  sdkconfig
bootloader_override/bootloader_components/main/: CMakeLists.txt  bootloader_start.c  crc32.c
bootloader_override/bootloader_components/main/ld/: bootloader.ld
